# md-scanner

./: .gitignore  .gitmodules  README.md  base.tex  gen_pdfs.sh  generate_file.sh  pipeline.py  requirements.txt
ImageProcessing/: im_proc.ipynb  processing.py
ImageProcessing/DeblurCNN/: dataset.py  dataset_generator.py  model.py  train.py
bb-extractor/: CMakeLists.txt  README.md  extract-bbs.cpp  main.sh
dataset_retriever/: .env.example  main.py
final-evaluation/: markdown-comparer.py  plot_scores_csv.py
font-style-classifier/: .env.example  .gitignore  README.md  classify.py  classify_dataset_gen.py  classify_section.py  common.py  dataset-generator.py  dataset.py  db_gen.py  db_retrieve.py  db_visualize.py  eval.py  eval.sh  eval_char_style.py  eval_font.py  eval_word_style.py  eval_word_style_classification.py  gen_dataset.py  gen_db.py  gen_section_md.py  inference.py  model.py  prepare_input.py  split_dataset.py  test_env.py  train.py
font-style-classifier/encoder/: model.py  train.py
font-style-classifier/model/: model.py  (+4 more)
font_style_classifier/: .gitignore  README.md  classify_section.py  classify_word.py  common.py  dataset.py  dataset_gen.py  dataset_split.py  db_gen.py  db_visualize.py  eval_word_font_classification.py  gen_section_md.py  write_section_md.py
layout-parser/: .gitignore  LP.ipynb
layoutlmv3/: .gitignore  main.ipynb  main.py
md-renderer/: README.md  gen_pdfs.sh  grab_page_as_pdf.py  main.sh  requirements.txt
md-retriever/: .env.example  main.py
tesseract-annotator/: tesseract-annotator.ipynb
to-coco-format/: converter.py
(+43 files in other folders)
